# NintyFont

./: .gitignore  CMakeLists.txt  aboutwindow.cpp  aboutwindow.h  charproppanel.cpp  charproppanel.h  fontinfopanel.cpp  fontinfopanel.h  globalstuffs.h  glyph.cpp  glyph.h  importsheetwindow.cpp  importsheetwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  membercallback.h  msys2_build.sh  propertylist.cpp  propertylist.h  qfilepathfield.cpp  qfilepathfield.h  qhexspinbox.cpp  qhexspinbox.h  readme.md  sizedarray.h  sjisconv.cpp  sjisconv.h  unicodenames.cpp  unicodenames.h  viewwidget.cpp  viewwidget.h
binarytools/: binaryreader.cpp  binaryreader.h  binarywriter.cpp  binarywriter.h  bitreader.cpp  bitreader.h  blocklinker.cpp  blocklinker.h  endianness.cpp  endianness.h
controls/: boolpicker.cpp  boolpicker.h  codepointpicker.cpp  codepointpicker.h  control.h  controls.h  endiannesspicker.cpp  endiannesspicker.h  label.cpp  label.h  spinbox.cpp  spinbox.h
formats/: fontbase.cpp  fontbase.h  formats.cpp  formats.h
formats/BFN1/: fontbfn1.cpp  fontbfn1.h  gly1.cpp  gly1.h  inf1.cpp  inf1.h  jutresfont.cpp  jutresfont.h  map1.cpp  map1.h  wid1.cpp  wid1.h  wid1entry.cpp  wid1entry.h
formats/CFNT/: binarycitrusfont.cpp  binarycitrusfont.h  cfnt.cpp  cfnt.h
formats/NFTR/: cglp.cpp  cglp.h  finf.cpp  finf.h  nftr.cpp  nftr.h  nitrofontresource.cpp  nitrofontresource.h  ntrfontmacros.h
formats/NFTR/CMAP/: cmap.cpp  cmap.h  cmapentry.cpp  cmapentry.h
formats/NFTR/CWDH/: charwidths.cpp  charwidths.h  cwdh.cpp  cwdh.h
formats/PM4F/: pmheader.cpp  pmheader.h  pocketmonstersgen4font.cpp  pocketmonstersgen4font.h
formats/RFNT/: binaryrevolutionfont.cpp  binaryrevolutionfont.h  rfnt.cpp  rfnt.h  rvlfontmacros.h  tglp.cpp  tglp.h
formats/conv/: bfttf.cpp  bfttf.h
image/: cafe.cpp  ctr.cpp  nitro.cpp  nx.cpp  revolution.cpp  texturecodec.h
